update to clamp